--- a/ARIMA.ipynb
+++ b/ARIMA.ipynb
@@ -16,7 +16,7 @@
     "from statsmodels.tsa.stattools import adfuller\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
-    "from sklearn.model_selection import train_test_split, TimeSeriesSplit\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
